<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/mainLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/sdkInitialized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sdkInitialized"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/setAutoEnforce"
            layout="@layout/setautoenforceparams" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/testInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/testSDK"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/restrictCopyPaste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/restrictCopyPaste"
                android:textIsSelectable="true" >
            </TextView>

            <TextView
                android:id="@+id/restrictCopyPasteVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textIsSelectable="true" >
            </TextView>

            <TextView
                android:id="@+id/selectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:text="@string/selectTextStr"
                android:textIsSelectable="true" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/restrictScreenShot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/restictScreenShot"
                android:textIsSelectable="true" >
            </TextView>

            <TextView
                android:id="@+id/restrictScreenShotVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textIsSelectable="true" >
            </TextView>

            <Button
                android:id="@+id/screenShotButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:text="@string/takeScreenShot"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/restrictExport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restrictExport"
                android:textIsSelectable="true" >
            </TextView>

            <TextView
                android:id="@+id/restrictExportVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restrictExport"
                android:textIsSelectable="true" >
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/selectedWhiteListedApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectedWhiteListApps"
            android:textSize="15sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/selectedWhiteListedAppsVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true" >
        </TextView>

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/openBrowser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/openInSecureBrowser"
                android:textSize="15sp" />

            <Button
                android:id="@+id/openEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:text="@string/composeInSecureEmail"
                android:textSize="15sp" />

            <Button
                android:id="@+id/openWhiteListedApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:text="@string/whitelistedApps"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/connectGateway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/connectGateway"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/gateCredsWayLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/domain"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/username"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textVisiblePassword"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gateWayLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/openEnterpriseGateway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connectGateway"
                android:textSize="15sp" />

            <Button
                android:id="@+id/openJIRA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/openJIRA"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />
         
         <Button
                android:id="@+id/encryptionTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/encryptionAPItest"
                android:textSize="15sp" />
         
         <TextView
                android:id="@+id/encryptionTestText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/encryptionAPItestText"
                android:textSize="15sp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        
        <TextView
            android:id="@+id/clearStuff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/clearConnection"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/main3Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/unbindFromMaaS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnectMaas"
                android:textSize="15sp" />

            <Button
                android:id="@+id/clearLogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clearLog"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/logs"
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>